@@ -1,5 +1,16 @@
 2003-11-22  Michael Banck  <mbanck@gmx.net>
 
+	* src/povray.cpp (CalcBoundingBox): Decouple declaration of 
+	`unsigned int i' from the for-loop. Contributed by Chris 
+	Morley <c.morley@gaseq.co.uk>.
+ 
+2003-11-22  Michael Banck  <mbanck@gmx.net>
+
+	* src/Makefile.am (libopenbabelinclude_HEADERS): Added 
+	babelconfig.h
+
+2003-11-22  Michael Banck  <mbanck@gmx.net>
+
 	* src/Makefile.am (EXTRA_DIST): Removed newmain.cpp, bondtyper.cpp
 	and bondtyper.h for now.
 
